tests/machine/x/cobol/pure_fold.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. PURE_FOLD.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 TRIPLE_RES PIC 9 VALUE 0.
       PROCEDURE DIVISION.
       PERFORM TRIPLE USING 1 + 2
       DISPLAY TRIPLE_RES
       STOP RUN.
       
       TRIPLE.
           PROCEDURE DIVISION USING X.
               COMPUTE TRIPLE_RES = X * 3
               EXIT.
